syntax = "proto3";

package pb;

import "barber/barber_roles.proto";

option go_package = "barbershop/src/pb/barber";


message GetBarberRolesRequest{
    string barber_id = 1;
    string barbershop_id = 2;
}

message GetBarberRolesResponse {
    BarberRoles barber_role = 1;
    string role_name = 2;
}
